Example Page Init

--- a/test/style.css
+++ b/test/style.css
@@ -1,4 +1,4 @@
-h1 {
+/* h1 {
     padding: 1vh;
     background-color: #00A49520;
     border: #00A495 5px solid;
@@ -8,4 +8,4 @@ h2 {
 }
 div {
     border: #00A495 1px solid;
-}
+} */
