스타일 예제 추가

--- a/test/style.css
+++ b/test/style.css
@@ -1,11 +1,18 @@
-/* h1 {
+h1 {
     padding: 1vh;
     background-color: #00A49520;
     border: #00A495 5px solid;
 }
 h2 {
     color: #00A495;
+    font-weight: 100;
+    font-size: 100px;
+    text-align: right;
+}
+h3 {
+    font-family: "함초롬돋움";
+    font-weight: 900;
 }
 div {
     border: #00A495 1px solid;
-} */
+}
